--- a/static/css/style.css
+++ b/static/css/style.css
@@ -276,3 +276,19 @@ input:focus, select:focus, textarea:focus {
   color: #fff;
   line-height: 20px;
 }
+
+footer {
+  text-align: center;
+  margin-top: 40px;
+  font-size: 14px;
+  color: #888;
+}
+
+footer a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
