--- a/templates/index.html
+++ b/templates/index.html
@@ -55,12 +55,11 @@
     </form>
   </div>
 
-  <footer style="text-align: center; margin-top: 40px; font-size: 14px; color: #888;">
+  <footer>
     Developed with ❤️ by <strong>Punit Kanzariya</strong><br>
-    <a href="https://gitlab.com/Punitkanzariya" target="_blank" style="color: #007bff; text-decoration: none;">
-      Visit my GitLab
-    </a>
+    <a href="https://gitlab.com/Punitkanzariya" target="_blank">Visit my GitLab</a>
   </footer>
+
 
   <script>
     const form = document.querySelector("form");
