--- a/templates/result.html
+++ b/templates/result.html
@@ -28,12 +28,11 @@
       <a href="{{ url_for('index') }}" class="submit-btn">🔁 Upscale Another</a>
     </div>
   </div>
-  <footer style="text-align: center; margin-top: 40px; font-size: 14px; color: #888;">
+  <footer>
     Developed with ❤️ by <strong>Punit Kanzariya</strong><br>
-    <a href="https://gitlab.com/Punitkanzariya" target="_blank" style="color: #007bff; text-decoration: none;">
-      Visit my GitLab
-    </a>
+    <a href="https://gitlab.com/Punitkanzariya" target="_blank">Visit my GitLab</a>
   </footer>
+
 </body>
 
 </html>
